--- a/PlaywrightSession/test-output/index.html
+++ b/PlaywrightSession/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse-396217457\testng-customsuite.xml</span>
+                    <span>C:\Users\DELL\AppData\Local\Temp\testng-eclipse--824170065\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -109,12 +109,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.qa.opencart.Tests.HomepageTest1" class="method navigator-link" hash-for-method="searchTest">searchTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.qa.opencart.Tests.HomepageTest1" class="method navigator-link" hash-for-method="searchTest(Samsung)">searchTest(Samsung)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.qa.opencart.Tests.HomepageTest1" class="method navigator-link" hash-for-method="homePageUrlTest">homePageUrlTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -124,7 +119,17 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.qa.opencart.Tests.HomepageTest1" class="method navigator-link" hash-for-method="searchTest(Samsung)">searchTest(Samsung)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.qa.opencart.Tests.HomepageTest1" class="method navigator-link" hash-for-method="searchTest(Macbook)">searchTest(Macbook)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.qa.opencart.Tests.HomepageTest1" class="method navigator-link" hash-for-method="searchTest">searchTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -154,17 +159,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="searchTest">
-                  </a> <!-- searchTest -->
-                  <span class="method-name">searchTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="searchTest(Samsung)">
-                  </a> <!-- searchTest(Samsung) -->
-                  <span class="method-name">searchTest</span>
-                  <span class="parameters">(Samsung)</span>
+                  <a name="homePageUrlTest">
+                  </a> <!-- homePageUrlTest -->
+                  <span class="method-name">homePageUrlTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -177,10 +174,25 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="searchTest(Samsung)">
+                  </a> <!-- searchTest(Samsung) -->
+                  <span class="method-name">searchTest</span>
+                  <span class="parameters">(Samsung)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="searchTest(Macbook)">
                   </a> <!-- searchTest(Macbook) -->
                   <span class="method-name">searchTest</span>
                   <span class="parameters">(Macbook)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchTest">
+                  </a> <!-- searchTest -->
+                  <span class="method-name">searchTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -188,7 +200,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse-396217457\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\DELL\AppData\Local\Temp\testng-eclipse--824170065\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -237,32 +249,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'searchTest')
 data.setCell(0, 2, 'com.qa.opencart.Tests.HomepageTest1')
-data.setCell(0, 3, 791);
+data.setCell(0, 3, 2257);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'searchTest')
 data.setCell(1, 2, 'com.qa.opencart.Tests.HomepageTest1')
-data.setCell(1, 3, 745);
+data.setCell(1, 3, 1220);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'searchTest')
 data.setCell(2, 2, 'com.qa.opencart.Tests.HomepageTest1')
-data.setCell(2, 3, 700);
+data.setCell(2, 3, 1002);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'searchTest')
 data.setCell(3, 2, 'com.qa.opencart.Tests.HomepageTest1')
-data.setCell(3, 3, 555);
+data.setCell(3, 3, 881);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'homePageTitleTest')
 data.setCell(4, 2, 'com.qa.opencart.Tests.HomepageTest1')
-data.setCell(4, 3, 34);
+data.setCell(4, 3, 27);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'homePageUrlTest')
+data.setCell(5, 2, 'com.qa.opencart.Tests.HomepageTest1')
+data.setCell(5, 3, 3);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -277,16 +293,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.qa.opencart.Tests.HomepageTest1</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">homePageUrlTest</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -302,27 +311,31 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">homePageTitleTest</span>
-                <span class="method-start">13307 ms</span>
+                <span class="method-start">32312 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">homePageUrlTest</span>
+                <span class="method-start">32349 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchTest(Macbook)</span>
-                <span class="method-start">13355 ms</span>
+                <span class="method-start">32365 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchTest(iMac)</span>
-                <span class="method-start">14154 ms</span>
+                <span class="method-start">34625 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchTest(Samsung)</span>
-                <span class="method-start">14857 ms</span>
+                <span class="method-start">35513 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">searchTest</span>
-                <span class="method-start">15605 ms</span>
+                <span class="method-start">36740 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">16169 ms</span>
+                <span class="method-start">37750 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
