--- a/PlaywrightSession/test-output/old/Default suite/methods-alphabetical.html
+++ b/PlaywrightSession/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fa7c99">  <td>22/06/16 20:06:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.homePageTitleTest()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@121314f7]">homePageTitleTest</td> 
-  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>22/06/16 20:06:39</td>   <td>2298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest()[pri:6, instance:com.qa.opencart.Tests.HomepageTest1@121314f7]">searchTest</td> 
-  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>22/06/16 20:06:38</td>   <td>1550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@121314f7]">searchTest</td> 
-  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>22/06/16 20:06:38</td>   <td>1550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@121314f7]">searchTest</td> 
-  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>22/06/16 20:06:38</td>   <td>1550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@121314f7]">searchTest</td> 
-  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>22/06/16 20:06:23</td>   <td>-13302</td> <td>&nbsp;</td><td title="&gt;&gt;HomepageTest1.setup()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@121314f7]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>22/06/16 20:06:40</td>   <td>2863</td> <td>&nbsp;</td><td title="&lt;&lt;HomepageTest1.teardown()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@121314f7]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1594138273</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>22/07/06 23:44:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.homePageTitleTest()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">homePageTitleTest</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>22/07/06 23:44:24</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.homePageUrlTest()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">homePageUrlTest</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>22/07/06 23:44:27</td>   <td>3201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">searchTest</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>22/07/06 23:44:27</td>   <td>3201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">searchTest</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>22/07/06 23:44:27</td>   <td>3201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">searchTest</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="d661ba">  <td>22/07/06 23:44:28</td>   <td>4428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest()[pri:6, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">searchTest</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="eee7ff">  <td>22/07/06 23:43:52</td>   <td>-32306</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="eee7ff">  <td>22/07/06 23:44:30</td>   <td>5438</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
 </table>
