--- a/PlaywrightSession/test-output/old/Default suite/methods-alphabetical.html
+++ b/PlaywrightSession/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d661ba">  <td>22/07/06 23:44:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.homePageTitleTest()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">homePageTitleTest</td> 
-  <td>main@1823409783</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/07/06 23:44:24</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.homePageUrlTest()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">homePageUrlTest</td> 
-  <td>main@1823409783</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/07/06 23:44:27</td>   <td>3201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">searchTest</td> 
-  <td>main@1823409783</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/07/06 23:44:27</td>   <td>3201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">searchTest</td> 
-  <td>main@1823409783</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/07/06 23:44:27</td>   <td>3201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest(java.lang.String)[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">searchTest</td> 
-  <td>main@1823409783</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/07/06 23:44:28</td>   <td>4428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomepageTest1.searchTest()[pri:6, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">searchTest</td> 
-  <td>main@1823409783</td>   <td></td> </tr>
-<tr bgcolor="eee7ff">  <td>22/07/06 23:43:52</td>   <td>-32306</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
-<tr bgcolor="eee7ff">  <td>22/07/06 23:44:30</td>   <td>5438</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.qa.opencart.Tests.HomepageTest1@25641d39]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>22/07/07 01:30:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.apploginTest()[pri:3, instance:com.qa.opencart.Tests.LoginPageTest@13fd2ccd]">apploginTest</td> 
+  <td>main@212890971</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>22/07/07 01:30:45</td>   <td>-33</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.forgotPSWLinkExists()[pri:2, instance:com.qa.opencart.Tests.LoginPageTest@13fd2ccd]">forgotPSWLinkExists</td> 
+  <td>main@212890971</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>22/07/07 01:30:45</td>   <td>-543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageNavigationTest()[pri:1, instance:com.qa.opencart.Tests.LoginPageTest@13fd2ccd]">loginPageNavigationTest</td> 
+  <td>main@212890971</td>   <td></td> </tr>
+<tr bgcolor="987794">  <td>22/07/07 01:30:26</td>   <td>-18926</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:com.qa.opencart.Tests.LoginPageTest@13fd2ccd]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@212890971</td>   <td></td> </tr>
 </table>
